--- a/SimpleSharp/SimpleSharp.csproj
+++ b/SimpleSharp/SimpleSharp.csproj
@@ -44,7 +44,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arrays.cs" />
-    <Compile Include="CollectionsToString.cs" />
     <Compile Include="ConsoleTable.cs" />
     <Compile Include="Diagnostics\Conditions.cs" />
     <Compile Include="Extensions\EnumerableExt.cs" />
@@ -54,11 +53,12 @@
     <Compile Include="Extensions\StringBuilderExt.cs" />
     <Compile Include="Extensions\StringExt.cs" />
     <Compile Include="Extensions\TypeExt.cs" />
-    <Compile Include="FormatOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Strings\FormatUtils.cs" />
-    <Compile Include="Strings\SystemFormatting.cs" />
-    <Compile Include="Strings\Hex.cs" />
+    <Compile Include="Strings\Formatting\Collections.cs" />
+    <Compile Include="Strings\Formatting\FormatUtils.cs" />
+    <Compile Include="Strings\Formatting\Hex.cs" />
+    <Compile Include="Strings\Formatting\HexOptions.cs" />
+    <Compile Include="Strings\Formatting\SystemFormatting.cs" />
     <Compile Include="Strings\LevenshteinDistance.cs" />
     <Compile Include="Strings\StringConstants.cs" />
     <Compile Include="ThreadLocalRandom.cs" />
