--- a/SimpleSharp/SimpleSharp.csproj
+++ b/SimpleSharp/SimpleSharp.csproj
@@ -46,27 +46,23 @@
     <Compile Include="Arrays.cs" />
     <Compile Include="ConsoleTable.cs" />
     <Compile Include="Diagnostics\Conditions.cs" />
-    <Compile Include="Enums\EnumExt.cs" />
     <Compile Include="Enums\EnumUtil.cs" />
-    <Compile Include="Files\FileExt.cs" />
     <Compile Include="Files\FileUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strings\Formatting\Collections.cs" />
     <Compile Include="Strings\Formatting\FormatUtils.cs" />
     <Compile Include="Strings\Formatting\Hex.cs" />
     <Compile Include="Strings\Formatting\HexOptions.cs" />
-    <Compile Include="Strings\Formatting\HexOptionsExt.cs" />
-    <Compile Include="Strings\Formatting\StringBuilderExt.cs" />
+    <Compile Include="Strings\Formatting\StringBuilderUtil.cs" />
     <Compile Include="Strings\Formatting\SystemFormatting.cs" />
     <Compile Include="Strings\LevenshteinDistance.cs" />
     <Compile Include="Strings\StringConstants.cs" />
-    <Compile Include="Strings\StringExt.cs" />
     <Compile Include="Strings\StringUtil.cs" />
     <Compile Include="ThreadLocalRandom.cs" />
     <Compile Include="Utilities\Common.cs" />
-    <Compile Include="Utilities\EnumerableExt.cs" />
+    <Compile Include="Utilities\EnumerableUtil.cs" />
     <Compile Include="Utilities\TaskUtil.cs" />
-    <Compile Include="Utilities\TypeExt.cs" />
+    <Compile Include="Utilities\TypeUtil.cs" />
     <Compile Include="VirtualCollection.cs" />
   </ItemGroup>
   <ItemGroup>
